--- a/client/src/components/MobileNavbar/style.css
+++ b/client/src/components/MobileNavbar/style.css
@@ -3,22 +3,18 @@
 }
 
 .navbar {
-    background-color: transparent;
-}
-
-.nav-item:hover, .menu-icon:hover {
-    color: #ff6060 !important;
+    background-color: white;
 }
 
 .menu-icon {
-    color: #2c3e50;
-    padding: 20px;
+    color: green;
+    padding: 10px;
 }
 
 .mobile-nav-item {
     font-size: 12px;
     padding-left: 10px;
     font-weight: 100;
-    color: #2c3e50 !important;
+    color: black !important;
     text-transform: uppercase;
 }
