add info card component + style

--- a/client/src/components/Common/style.css
+++ b/client/src/components/Common/style.css
@@ -10,3 +10,14 @@
     color: #171718;
 }
 
+.info-card-section {
+    color: #6422DB;
+}
+
+.info-card h1 {
+    color: #25234D;
+}
+
+.info-card-description {
+    color: #0B132A;
+}
