fixing the nav bar to mobile nav issue and logo

--- a/client/src/components/Blobs/style.css
+++ b/client/src/components/Blobs/style.css
@@ -1,5 +1,12 @@
 /* Blob styling */
 
-body, html { margin: 0; }
+body, html {
+     margin: 0;
+  
+     }
 
-canvas { position: fixed; touch-action: none; }
+canvas {
+     position: fixed; 
+     touch-action: none; 
+     size: 20rem;
+    }
