--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -13,7 +13,14 @@ span {
   font-size: 20px;
   line-height: 30px;
   text-transform: capitalize !important;
+  padding-right: 10%;
   
+}
+
+img {
+    /* padding-left: 20%; */
+    margin-left: 40%;
+
 }
 
 .nav-item:hover {
