--- a/client/src/components/Navbar/mobilestyle.css
+++ b/client/src/components/Navbar/mobilestyle.css
@@ -8,7 +8,13 @@
 
 .menu-icon {
     color: #0084B2;
-    padding: 10px;
+    padding: 10%;
+    align-content: ;
+
+
+}
+.uk-navbar-center:only-child, .uk-navbar-left, .uk-navbar-right {
+    margin-left: 0%;
 }
 
 .mobile-nav-item{
