mobile friendly styling & design

--- a/client/src/components/InfoCard/style.css
+++ b/client/src/components/InfoCard/style.css
@@ -3,6 +3,31 @@
     color: #171718;
     border: none;
     border-radius: 100px 100px 100px 100px;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
+.info-card uk-card uk-card-default uk-card-body  {
+    margin: 0px !important;
+   padding: 0px !important;
+
+
+}
+.info-card {
+    margin: 0px !important;
+    animation: bounceInLeft ;
+    animation-duration: 2s;
+}
+/* .uk-card-body{
+    margin: 0px;
+    animation: bounceInLeft ;
+    animation-duration: 2s;
+}  */
+#section-container {
+
+    border-color: 1px solid rgb(61, 60, 60);
+    padding: 7%;
+    border-radius: 5px;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 .common-button:hover {
@@ -13,13 +38,80 @@
 .info-card-section {
     color: #6422DB;
 }
-
-.info-card h1 {
+h1 {
     color: #25234D;
+    font-weight: bold;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
-
-.info-card-description {
+p {
     color: #0B132A;
 }
 
+@media (max-width: 520px) {
+    body::before {
+      
+      display: block;
+      margin: 1em;
+      font-weight: bold;
+    }
+  }
 
+  @media only screen and (min-width: 768px) {
+    #section-container {
+         margin-top: 50px;  
+        width: 60%; 
+        /* padding-left: 30%; */
+padding-top: 50px;
+    } 
+}
+
+@media only screen and (min-width: 540px) {
+    #section-container {
+        margin-top: 50px;  
+        width: 60%; 
+        /* padding-left: 30%; */
+        padding-top: 50px;
+    } 
+}
+@media only screen and (min-width: 300px) {
+    #section-container {
+         margin-top: 50px;  
+        width: 60%; 
+        /* padding-left: 30%; */
+        padding-top: 50px;
+    } 
+    .uk-container>:last-child {
+         margin-top: 50px;  
+        width: 60%; 
+        margin-right: 100px;
+        /* padding-left: 30%; */
+padding-top: 50px;
+        font-size: small;
+    } 
+}
+@media only screen and (min-width: 300px) {
+    .uk-container>:last-child {
+         margin-top: 50px;  
+        width: 60%; 
+        margin-right: 100px;
+        /* padding-left: 30%; */
+padding-top: 50px;
+        font-size: small;
+    } 
+}
+
+.uk-container>:last-child {
+
+    margin-right: 800px;
+}
+
+  #section-container {
+    margin-top: 200px;
+    margin-right: 800px;
+    margin-bottom: 200px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+  
+    animation: bounceInLeft;
+    animation-duration: 2s;
+}
