--- a/client/src/components/Section2/style/style.css
+++ b/client/src/components/Section2/style/style.css
@@ -4,26 +4,29 @@
   margin: 0px 0px 0px 0px;
   padding-top: 100px;
   padding-bottom: 50px;
-  /* border-bottom-left-radius: 50% 40%; */
+  border-bottom-left-radius: 50% 40%;
   /* Curved corners */
   /* border-top-right-radius: 30% 10%; */
   background: 
-    url(./images/About-Us-Circle.png) right bottom no-repeat,
-    url(./images/Ellipse-3-copy-7.png) left bottom no-repeat,
-    url(./images/Oval.png) left center no-repeat, white;
-  background-size: 400px, 500px, 200px;
+  url(./images/Oval.png)  center no-repeat,
+  url(./images/About-Us-Circle.png) left center no-repeat,
+  url(./images/Vector-circle.png) center no-repeat,
+  url(./images/Ellipse-3-copy-7.png) right top no-repeat,
+   white;
+  background-size: 200px, 700px,500px, 300px ;
+  
+
 }
-
-
 /*changed the section-container id of each section*/
 #sectionTwo {
   margin-left: 600px;
-  /* padding-top: 30px; */
+  padding-top: 100px;
   padding-bottom: 20px;
   animation: bounceInLeft;
   animation-duration: 3s;
   border-color: 1px solid rgb(61, 60, 60);
-  /* padding: 7%; */
+  /* makes sure the infoCard containers are same sized */
+  padding: 7%;
   border-radius: 5px;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
@@ -32,17 +35,17 @@
   #section2-wrapper {
     /* Background color */
     margin: 0px 0px 0px 0px;
-    /* border-bottom-left-radius: 50% 40%; */
+    border-bottom-left-radius: 50% 40%;
     /* Curved corners */
     /* border-bottom-right-radius: 30% 20%; */
     background: 
-      url(./images/About-Us-Circle.png) right center no-repeat,
-      url(./images/About-Us-Circle.png) right center no-repeat,
-      url(./images/Ellipse-3-copy-7.png) left bottom no-repeat,
-      url(./images/Oval.png) left center no-repeat, white;
-    background-size: 400px, auto, auto, auto;
+    url(./images/Oval.png)  center no-repeat,
+    url(./images/About-Us-Circle.png) left center no-repeat,
+    url(./images/Vector-circle.png) center no-repeat,
+    url(./images/Ellipse-3-copy-7.png) right top no-repeat,
+     white;
+  background-size: 100px, 350px, 250px, 150px;
   }
-
 
   #sectionTwo {
     margin-left: 50px;
@@ -51,7 +54,7 @@
     animation: bounceInLeft;
     animation-duration: 2s;
     border-color: 1px solid rgb(61, 60, 60);
-    padding: 7%;
+    padding: 20%;
     border-radius: 5px;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
   }
