adding section backgrounds and styling

--- a/client/src/components/Section3/style/style.css
+++ b/client/src/components/Section3/style/style.css
@@ -4,7 +4,7 @@
   margin: 0px 0px 0px 0px;
   padding-top: 100px;
   padding-bottom: 50px;
-  /* border-bottom-left-radius: 50% 40%; */
+  border-top-left-radius: 50% 40%;
   /* Curved corners */
   border-bottom-right-radius: 30% 20%;
   background: 
