--- a/client/src/components/Section4/style/style.css
+++ b/client/src/components/Section4/style/style.css
@@ -6,61 +6,64 @@
   padding-bottom: 50px;
   /* border-bottom-left-radius: 50% 40%; */
   /* Curved corners */
-  /* border-top-right-radius: 30% 10%; */
+  border-bottom-right-radius: 30% 20%;
   background: 
-    url(./images/About-Us-Circle.png) right bottom no-repeat,
-    url(./images/Ellipse-3-copy-7.png) left bottom no-repeat,
-    url(./images/Oval.png) left center no-repeat, white;
-  background-size: 400px, 500px, 200px;
+ #27aae1;
+
 }
-
-
-/*changed the section-container id of each section*/
+/*changed the section-container id name to sectionFour*/
 #sectionFour {
-  margin-left: 600px;
-  /* padding-top: 30px; */
+  margin-right: 700px;
+  padding-top: 30px;
   padding-bottom: 20px;
   animation: bounceInLeft;
-  animation-duration: 3s;
+  animation-duration: 2s;
   border-color: 1px solid rgb(61, 60, 60);
-  /* padding: 7%; */
+    /* makes sure the infoCard containers are same sized */
+  padding: 7%;
   border-radius: 5px;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 /* max width says at this and below do this styling */
 @media only screen and (max-width: 1200px) {
-  #section3-wrapper {
+  #section4-wrapper {
     /* Background color */
     margin: 0px 0px 0px 0px;
     /* border-bottom-left-radius: 50% 40%; */
     /* Curved corners */
-    /* border-bottom-right-radius: 30% 20%; */
+    border-bottom-right-radius: 30% 20%;
     background: 
-      url(./images/About-Us-Circle.png) right center no-repeat,
-      url(./images/About-Us-Circle.png) right center no-repeat,
-      url(./images/Ellipse-3-copy-7.png) left bottom no-repeat,
-      url(./images/Oval.png) left center no-repeat, white;
-    background-size: 400px, auto, auto, auto;
+ #27aae1;
+
   }
-
-
   #sectionFour {
-    margin-left: 50px;
+    margin-right: 50px;
     padding-top: 3px;
     padding-bottom: 2px;
     animation: bounceInLeft;
     animation-duration: 2s;
     border-color: 1px solid rgb(61, 60, 60);
-    padding: 7%;
+    padding: 20%;
     border-radius: 5px;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
   }
 }
 
-@media only screen and (max-width: 540px) {
+@media only screen and (max-width: 840px) {
+  #section4-wrapper {
+    /* Background color */
+    margin: 0px 0px 0px 0px;
+    /* border-bottom-left-radius: 50% 40%; */
+    /* Curved corners */
+    border-bottom-right-radius: 30% 20%;
+    background: 
+
+ #27aae1;
+
+  }
   #sectionFour {
     width: 60%;
-    padding-left: 30%;
+    padding: 20px 20px 20px 20px;
     padding-top: 50px;
   }
 }
