--- a/client/src/components/Footer/style/style.css
+++ b/client/src/components/Footer/style/style.css
@@ -1,15 +1,81 @@
+/* uk-container-first wraps the background so that it encloses the entirescreen */
+#footer-wrapper {
+  /* Background color */
+  margin: 0px 0px 0px 0px;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  /* border-bottom-left-radius: 50% 40%; */
+  /* Curved corners */
+  border-top-left-radius: 30% 20%;
+  background: 
+   #27aae1;
 
-.FooterSection{
+}
+/*changed the section-container id name to sectionFooter*/
+#sectionFooter {
+  margin-right: 700px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  animation: bounceInLeft;
+  animation-duration: 2s;
+  border-color: 1px solid rgb(61, 60, 60);
+    /* makes sure the infoCard containers are same sized */
+  padding: 7%;
+  border-radius: 5px;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+/* max width says at this and below do this styling */
+@media only screen and (max-width: 1200px) {
+  #footer-wrapper {
     /* Background color */
     margin: 0px 0px 0px 0px;
     /* border-bottom-left-radius: 50% 40%; */
-        /* Curved corners */
+    /* Curved corners */
     border-top-left-radius: 30% 20%;
-    background: #27AAE1;
-
+    background: 
+     #27aae1;
+  }
+  #sectionFooter {
+    margin-right: 50px;
+    padding-top: 3px;
+    padding-bottom: 2px;
+    animation: bounceInLeft;
+    animation-duration: 2s;
+    border-color: 1px solid rgb(61, 60, 60);
+    padding: 20%;
+    border-radius: 5px;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+  }
 }
 
-.uk-container-xlarge {
-    max-width: 2500px;
+@media only screen and (max-width: 840px) {
+  #footer-wrapper {
+    /* Background color */
+    margin: 0px 0px 0px 0px;
+    /* border-bottom-left-radius: 50% 40%; */
+    /* Curved corners */
+    border-top-left-radius: 30% 20%;
+    background: 
+     #27aae1;
+  }
+  #sectionFooter {
+    width: 60%;
+    padding: 20px 20px 20px 20px;
+    padding-top: 50px;
+  }
+}
+@media only screen and (max-width: 300px) {
+  #sectionFooter {
+    width: 60%;
+    padding-left: 30%;
+    padding-top: 50px;
+  }
+  .uk-container > :last-child {
+    width: 60%;
+    /* margin-right: 100px; */
+    padding-left: 30%;
+    padding-top: 50px;
+    font-size: small;
+  }
 }
 
